syntax = "proto3";

package api.admin;

import "google/protobuf/duration.proto";
import "enum.proto";

option go_package = "github.com/aide-family/moon/api/admin;admin";
option java_multiple_files = true;
option java_package = "api.admin";

// 此处定义admin下所有的基础model

// 下拉选择扩展数据
message SelectExtend {
  // 图标
  string icon = 1;
  // 颜色
  string color = 2;
  // 描述
  string remark = 3;
  // 图片URL
  string image = 4;
}

// 下拉选择基础数据
message SelectItem {
  // 数据值
  uint32 value = 1;
  // 数据label
  string label = 2;
  // 子级数据, 针对级联选择
  repeated SelectItem children = 3;
  // 是否禁用
  bool disabled = 4;
  // 针对有图标类型的配置项(可选，默认为null)
  optional SelectExtend extend = 5;
}

// 用户模块
message UserItem {
  // 用户id
  uint32 id = 1;
  // 用户名
  string name = 2;
  // 昵称
  string nickname = 3;
  // 邮箱
  string email = 4;
  // 手机
  string phone = 5;
  // 状态
  Status status = 6;
  // 性别
  Gender gender = 7;
  // 角色
  Role role = 8;
  // 头像
  string avatar = 9;
  // 个人说明
  string remark = 10;
  // 创建时间
  string createdAt = 11;
  // 更新时间
  string updatedAt = 12;
}

// 系统API资源模块
message ResourceItem {
  // 接口ID
  uint32 id = 1;
  // 接口名称
  string name = 2;
  // 接口路径
  string path = 3;
  // 接口状态
  Status status = 4;
  // 备注
  string remark = 5;
  // 创建时间
  string createdAt = 6;
  // 更新时间
  string updatedAt = 7;
  // 所属模块
  ModuleType module = 9;
  // 所属领域
  DomainType domain = 10;
}

// 系统菜单模块
message MenuItem {
  // 菜单ID
  uint32 id = 1;
  // 菜单名称
  string name = 2;
  // 菜单路径
  string path = 3;
  // 菜单图标
  string icon = 4;
  // 菜单状态
  Status status = 5;
  // 父级菜单
  uint32 parentId = 6;
  // 创建时间
  string createdAt = 7;
  // 更新时间
  string updatedAt = 8;
  // 菜单层级
  int32 level = 9;
  // 菜单类型
  MenuType type = 10;
  // 组件路径
  string component = 11;
  // 权限
  string permission = 12;
  // 排序
  int32 sort = 13;
  // 英文名称
  string enName = 14;
}

// 系统菜单树
message MenuTree {
  // 菜单ID
  uint32 id = 1;
  // 菜单名称
  string name = 2;
  // 菜单路径
  string path = 3;
  // 菜单图标
  string icon = 4;
  // 菜单状态
  Status status = 5;
  // 父级菜单
  uint32 parentId = 6;
  // 创建时间
  string createdAt = 7;
  // 更新时间
  string updatedAt = 8;
  // 菜单层级
  int32 level = 9;
  // 菜单子级数据
  repeated MenuTree children = 10;
  // 菜单类型
  MenuType type = 11;
  // 组件路径
  string component = 12;
  // 权限
  string permission = 13;
  // 排序
  int32 sort = 14;
  // 英文名称
  string enName = 15;
}



// 团队成员
message TeamMemberItem {
  // 用户ID
  uint32 userId = 1;
  // 成员ID
  uint32 id = 2;
  // 角色
  Role role = 3;
  // 状态
  Status status = 4;
  // 创建时间
  string createdAt = 5;
  // 更新时间
  string updatedAt = 6;
  // 用户明细
  UserItem user = 7;
}

// 团队模块
message TeamItem {
  // 团队ID
  uint32 id = 1;
  // 团队名称
  string name = 2;
  // 团队状态
  Status status = 3;
  // 团队描述
  string remark = 4;
  // 创建时间
  string createdAt = 5;
  // 更新时间
  string updatedAt = 6;
  // 负责人
  UserItem leader = 7;
  // 创建者
  UserItem creator = 8;
  // 团队LOGO
  string logo = 9;
  // 管理员（不包含创建者， 因为创建者不一定是管理员，但是包含负责人）
  repeated TeamMemberItem admin = 10;
}

// 团队角色模块
message TeamRole {
  // 角色ID
  uint32 id = 1;
  // 角色名称
  string name = 2;
  // 角色描述
  string remark = 3;
  // 创建时间
  string createdAt = 4;
  // 更新时间
  string updatedAt = 5;
  // 状态
  Status status = 6;
  // 资源列表
  repeated ResourceItem resources = 7;
}

// 数据源模块
message DatasourceItem {
  // 数据源ID
  uint32 id = 1;
  // 数据源名称
  string name = 2;
  // 数据源类型
  DatasourceType datasourceType = 3;
  // 数据源地址
  string endpoint = 4;
  // 状态
  Status status = 5;
  // 创建时间
  string createdAt = 6;
  // 更新时间
  string updatedAt = 7;
  // 配置信息
  map<string, string> config = 8;
  // 描述
  string remark = 9;
  // 存储器类型
  StorageType storageType = 10;
  // 创建者
  UserItem creator = 11;
}

// 查询到的数据详情， 用与元数据构建
message MetricItem {
  // 指标名称
  string name = 1;
  // 帮助信息
  string help = 2;
  // 类型
  MetricType type = 3;
  // 标签集合
  repeated MetricLabelItem labels = 4;
  // 指标单位
  string unit = 5;
  // ID
  uint32 id = 6;
}

// 指标数据标签
message MetricLabelItem {
  // 标签名称
  string name = 1;
  // 标签值
  repeated MetricLabelValueItem values = 2;
  // ID
  uint32 id = 3;
}

// 指标数据标签值
message MetricLabelValueItem {
  // ID
  uint32 id = 1;
  // 值
  string value = 2;
}

message DictItem{
  // ID
  uint32 id = 1;
  // 字典名称
  string name = 2;
  // 字典类型
  DictType dictType = 3;
  // 颜色类型
  string colorType = 4;
  // css样式
  string cssClass = 5;
  // 字典值
  string value = 6;
  // 图标
  string icon = 7;
  //图片url
  string imageUrl = 8;
  // 状态
  Status status = 9;
  // 语言
  string languageCode = 10;
  // 字典备注
  string remark = 11;
  // 创建时间
  string createdAt = 12;
  // 更新时间
  string updatedAt = 13;
}

message StrategyLevelItem {
  // 策略持续时间
  int64 duration = 3;
  // 持续次数
  uint32 count = 4;
  // 持续的类型
  SustainType sustainType = 5;
  // 执行频率
  int64 interval = 8;
  // 状态
  Status status = 9;
  // 数据主键
  uint32 id = 10;
  // 告警等级ID
  uint32 levelId = 11;
  // 告警等级明细
  SelectItem level = 12;
  // 告警页面
  repeated SelectItem alarmPages = 13;
  // 阈值
  double threshold = 14;
  // 所属策略
  uint32 strategyId = 15;
  // 条件
  Condition condition = 16;
  // 告警分组
  repeated AlarmNoticeGroupItem alarmGroups = 25;
  // label匹配的告警通知组
  repeated LabelNoticeItem labelNotices = 26;
}

message StrategyItem {
  // 策略名称
  string name = 1;
  // 策略语句
  string expr = 2;
  // 根据策略等级配置的详细策略， key为策略等级ID
  repeated StrategyLevelItem levels = 3;
  // 策略标签
  map<string, string> labels = 6;
  // 策略注解
  map<string, string> annotations = 7;
  // 采样率
  uint32 step = 8;
  // 数据源
  repeated DatasourceItem datasource = 9;
  // 策略ID
  uint32 id = 10;
  // 策略状态
  Status status = 11;
  // 创建时间
  string createdAt = 12;
  // 更新时间
  string updatedAt = 13;
  // 策略说明信息
  string remark = 14;
  // 所属策略组
  uint32 groupId = 15;
  // 策略组信息
  StrategyGroupItem group = 16;
  // 模板id
  uint32 templateId = 20;
  // 模板来源
  TemplateSourceType templateSource = 23;
  // 策略类型
  repeated DictItem categories = 24;
  // 告警分组
  repeated AlarmNoticeGroupItem alarmNoticeGroups = 25;
}

message StrategyGroupItem {
  // 策略组ID
  uint32 id = 1;
  // 策略组名称
  string name = 2;
  // 策略组状态
  Status status = 3;
  // 创建时间
  string createdAt = 4;
  // 更新时间
  string updatedAt = 5;
  // 策略组说明信息
  string remark = 6;
  // 策略组创建人
  string creator = 7;
  // 创建者ID
  uint32 creatorId = 8;
  // 策略列表
  repeated StrategyItem strategies = 9;
  // 策略总数
  uint64 strategyCount = 10;
  // 策略开启总数
  uint64 enableStrategyCount = 11;
  // 分组类型
  repeated DictItem  categories = 12;
}

message StrategyLevelTemplateItem {
  // ID
  uint32 id = 1;
  // 持续时间
  google.protobuf.Duration duration = 3;
  // 持续次数
  uint32 count = 4;
  // 持续类型
  SustainType sustainType = 5;
  // 状态
  Status status = 9;
  // 告警等级ID
  uint32 levelId = 10;
  // 告警等级
  SelectItem level = 11;
  // 阈值
  double threshold = 12;
  // 条件
  Condition condition = 13;
  // 所属策略
  uint32 strategyId = 14;
}

message StrategyTemplateItem {
  // 策略模板ID
  uint32 id = 1;
  // 策略模板名称
  string alert = 2;
  // 策略语句
  string expr = 3;
  repeated StrategyLevelTemplateItem levels = 4;
  // 策略标签
  map<string, string> labels = 5;
  // 策略注解
  map<string, string> annotations = 6;
  // 策略模板状态
  Status status = 7;
  // 创建时间
  string createdAt = 8;
  // 更新时间
  string updatedAt = 9;
  // 策略模板说明信息
  string remark = 10;
  // 创建人
  UserItem creator = 11;
  // 模板类型
  repeated SelectItem categories = 12;
}

message StrategyAlarmLevel {
  // ID
  uint32 id = 1;
  // 告警等级名称
  string name = 2;
  // 告警等级颜色
  string color = 3;
  // 状态
  Status status = 4;
  // 创建时间
  string createdAt = 5;
  // 更新时间
  string updatedAt = 6;
  // 等级
  int32 level = 7;
}

message DashboardItem {
  // 仪表板ID
  uint32 id = 1;
  // 仪表板名称
  string title = 2;
  // 仪表板说明
  string remark = 3;
  // 仪表板创建时间, unix时间戳
  string createdAt = 4;
  // 仪表板更新时间, unix时间戳
  string updatedAt = 5;
  // 仪表板颜色
  string color = 7;
  // 图表列表
  repeated ChartItem charts = 8;
  // 仪表板状态
  Status status = 9;
  // 关联策略组
  repeated StrategyGroupItem groups = 10;
}

message ChartItem {
  // 图表ID
  uint32 id = 1;
  // 图表标题
  string title = 2;
  // 图表说明
  string remark = 3;
  // 图表url
  string url = 4;
  // 图表状态
  Status status = 5;
  // 图表类型
  ChartType chartType = 6;
  // 宽度
  string  width = 7;
  // 高度
  string  height = 8;
}

message RealtimeAlarmItem {
  // ID
  uint32 id = 1;
  // 告警开始时间
  string startsAt = 2;
  // 告警结束时间
  string endsAt = 3;
  // 告警状态
  AlertStatus status = 4;
  // 告警级别
  SelectItem level = 5;
  // 告警级别ID
  uint32 levelID = 6;
  // 告警策略ID
  uint32 strategyID = 7;
  // 告警策略
  StrategyItem strategy = 8;
  // 告警摘要
  string summary = 9;
  // 告警详情
  string description = 10;
  // 触发告警表达式
  string expr = 11;
  // 数据源ID
  uint32 datasourceID = 12;
  // 数据源
  DatasourceItem datasource = 13;
  // 指纹
  string fingerprint = 14;
}

// 我的告警页面明细
message SelfAlarmPageItem {
  // ID
  uint32 id = 1;
  // 告警页面名称
  string name = 2;
  // 颜色类型
  string colorType = 4;
  // css样式
  string cssClass = 5;
  // 告警页面值
  string value = 6;
  // 图标
  string icon = 7;
  //图片url
  string imageUrl = 8;
  // 语言
  string languageCode = 10;
  // 告警页面备注
  string remark = 11;
}


message AlarmNoticeGroupItem {
  // 告警组ID
  uint32 id = 1;
  // 告警组名称
  string name = 2;
  // 告警组状态
  Status status = 3;
  // 创建时间
  string createdAt = 4;
  // 更新时间
  string updatedAt = 5;
  // 告警组说明信息
  string remark = 6;
  // 告警组创建人
  string creator = 7;
  // 创建者ID
  uint32 creatorId = 8;
  // 通知人列表
  repeated NoticeItem noticeUsers = 9;
  // hooks
  repeated AlarmHookItem hooks = 10;
}

// 通知人
message NoticeItem {
  // 用户明细
  UserItem user = 1;
  // 通知类型
  NotifyType notifyType = 2;
}

// 策略标签
message LabelNoticeItem {
  // 标签名
  string name = 1;
  // 标签值
  string value = 2;
  // 告警组
  repeated AlarmNoticeGroupItem alarmGroups = 3;
}

// 策略订阅item
message StrategySubscriberItem {
  // 订阅ID
  uint32 id = 1;
  // 用户明细
  UserItem user = 2;
  // 通知类型
  NotifyType notifyType = 3;
}

// hook item
message AlarmHookItem {
  // hookID
  uint32 id = 1;
  // hook名称
  string name = 2;
  // hook状态
  Status status = 3;
  // 创建时间
  string createdAt = 4;
  // 更新时间
  string updatedAt = 5;
  // hook说明信息
  string remark = 6;
  // hook创建人
  string creator = 7;
  // hook应用类型
  HookApp hookApp = 8;
  // secret
  string secret = 9;
  // url
  string  url = 10;
}

message NoticeUserMessage {
  uint32 id = 1;
  // 消息类型 'info' | 'success' | 'warning' | 'error'
  string category = 2;
  string content = 3;
  int64 timestamp = 4;
  // 业务类型 'invitation' | 'notice'
  string biz = 5;
  uint32 bizID = 6;
}

// invite item
message InviteItem{
 repeated TeamRole roles = 1;
  TeamItem team = 2;
  uint32 id = 3;
  InviteType inviteType = 4;
}
