syntax = "proto3";

package api.houyi.common;

import "google/protobuf/duration.proto";
import "houyi/common/team.proto";
import "houyi/common/datasource.proto";

option go_package = "github.com/aide-family/moon/pkg/api/houyi/common;common";

enum StrategyType {
  STRATEGY_TYPE_UNKNOWN = 0;
  METRIC = 1;
  EVENT = 2;
  LOGS = 3;
  PORT = 4;
  HTTP = 5;
  PING = 6;
  CERT = 7;
}

// SampleMode represents the sampling mode
// (e.g., how many times an event occurs within a period)
enum SampleMode {
  // Unknown
  SAMPLE_MODE_UNKNOWN = 0;
  // Occurs n times consecutively within m time
  FOR = 1;
  // Occurs at most n times within m time
  MAX = 2;
  // Occurs at least n times within m time
  MIN = 3;
}

message MetricStrategyItem {
  // Condition for judgment
  enum Condition {
    // Unknown
    METRIC_STRATEGY_CONDITION_UNKNOWN = 0;
    // Equal to
    EQ = 1;
    // Not equal to
    NE = 2;
    // Greater than
    GT = 3;
    // Greater than or equal to
    GTE = 4;
    // Less than
    LT = 5;
    // Less than or equal to
    LTE = 6;
    // In range
    IN = 7;
    // Not in range
    NOT_IN = 8;
  }

  message LabelNotices {
    string key = 1;
    string value = 2;
    repeated string receiverRoutes = 3;
  }

  message MetricRuleItem {
    uint32 strategyId = 1;
    uint32 levelId = 2;
    string levelName = 3;
    SampleMode sampleMode = 4;
    int64 count = 5;
    Condition condition = 6;
    repeated double values = 7;
    repeated string receiverRoutes = 8;
    repeated LabelNotices labelNotices = 9;
    google.protobuf.Duration duration = 10;
    bool enable = 11;
  }

  message MetricDatasourceItem {
    houyi.common.MetricDatasourceDriver driver = 1;
    uint32 id = 2;
  }

  houyi.common.TeamItem team = 1;
  repeated MetricDatasourceItem datasource = 2;
  string name = 3;
  string expr = 4;
  repeated string receiverRoutes = 5;
  map<string, string> labels = 6;
  map<string, string> annotations = 7;
  uint32 strategyId = 8;
  repeated MetricRuleItem rules = 9;
}

message CertificateStrategyItem {
  // Condition for judgment
  enum Condition {
    // Unknown
    CERTIFICATE_STRATEGY_CONDITION_UNKNOWN = 0;
    // Equal to
    EQ = 1;
    // Greater than
    GT = 2;
    // Greater than or equal to
    GTE = 3;
    // Less than
    LT = 4;
    // Less than or equal to
    LTE = 5;
    // Before current time
    BEFORE = 6;
    // After current time
    AFTER = 7;
  }
  message CertificateRuleItem {
    uint32 strategyId = 1;
    uint32 levelId = 2;
    Condition condition = 3;
    int64 value = 4; // day or timestamp
    repeated string receiverRoutes = 5;
  }

  houyi.common.TeamItem team = 1;
  repeated houyi.common.CertificateDatasourceItem datasource = 2;
  string name = 3;
  repeated string receiverRoutes = 4;
  map<string, string> labels = 5;
  map<string, string> annotations = 6;
  uint32 strategyId = 7;
  repeated CertificateRuleItem rules = 8;
}

message ServerPortStrategyItem {
  enum Condition {
    // Unknown
    SERVER_PORT_STRATEGY_CONDITION_UNKNOWN = 0;
    // Open
    OPEN = 1;
    // Close
    CLOSE = 2;
  }
  houyi.common.TeamItem team = 1;
  repeated houyi.common.ServerPortDatasourceItem datasource = 2;
  string name = 3;
  repeated string receiverRoutes = 4;
  map<string, string> labels = 5;
  map<string, string> annotations = 6;
  uint32 strategyId = 7;
  Condition condition = 8;
}

message HttpStrategyItem {
  enum Condition {
    // Unknown
    HTTP_STRATEGY_CONDITION_UNKNOWN = 0;
    // Equal to
    EQ = 1;
    // Greater than
    GT = 2;
    // Greater than or equal to
    GTE = 3;
    // Less than
    LT = 4;
    // Less than or equal to
    LTE = 5;
  }

  enum Judgment {
    // Unknown
    HTTP_STRATEGY_JUDGMENT_UNKNOWN = 0;
    OR = 1;
    AND = 2;
  }

  message HttpRuleItem {
    uint32 strategyId = 1;
    uint32 levelId = 2;
    Condition responseTimeCondition = 3;
    google.protobuf.Duration responseTime = 4;
    Condition statusCodeCondition = 5;
    int32 statusCode = 6;
    Judgment judgment = 7;
    repeated string receiverRoutes = 8;
  }

  houyi.common.TeamItem team = 1;
  repeated houyi.common.HttpDatasourceItem datasource = 2;
  string name = 3;
  repeated string receiverRoutes = 4;
  map<string, string> labels = 5;
  map<string, string> annotations = 6;
  uint32 strategyId = 7;
  repeated HttpRuleItem rules = 8;
}

message PingStrategyItem {
  enum Condition {
    // Unknown
    PING_STRATEGY_CONDITION_UNKNOWN = 0;
    // Equal to
    EQ = 1;
    // Greater than
    GT = 2;
    // Greater than or equal to
    GTE = 3;
    // Less than
    LT = 4;
    // Less than or equal to
    LTE = 5;
  }

  message PingRuleItem {
    uint32 strategyId = 1;
    uint32 levelId = 2;
    Condition responseTimeCondition = 3;
    google.protobuf.Duration responseTime = 4;
    repeated string receiverRoutes = 5;
  }

  houyi.common.TeamItem team = 1;
  repeated houyi.common.PingDatasourceItem datasource = 2;
  string name = 3;
  repeated string receiverRoutes = 4;
  map<string, string> labels = 5;
  map<string, string> annotations = 6;
  uint32 strategyId = 7;
  repeated PingRuleItem rules = 8;
  bool lossPacket = 9;
}

message EventStrategyItem {
  enum DataType {
    EVENT_STRATEGY_DATA_TYPE_UNKNOWN = 0;
    STRING = 1;
    NUMBER = 2;
    BOOL = 3;
  }

  enum StringCondition {
    // Unknown
    EVENT_STRATEGY_STRING_CONDITION_UNKNOWN = 0;
    // Equal to
    STRING_EQ = 1;
    // Not equal to
    STRING_NE = 2;
    // Contains
    STRING_CONTAINS = 3;
    // Not contains
    STRING_NOT_CONTAINS = 4;
    // Prefix
    STRING_PREFIX = 5;
    // Suffix
    STRING_SUFFIX = 6;
    // Regular expression match
    STRING_REGEX = 7;
  }

  enum NumberCondition {
    // Unknown
    EVENT_STRATEGY_NUMBER_CONDITION_UNKNOWN = 0;
    // Equal to
    NUMBER_EQ = 1;
    // Not equal to
    NUMBER_NE = 2;
    // Greater than
    NUMBER_GT = 3;
    // Greater than or equal to
    NUMBER_GTE = 4;
    // Less than
    NUMBER_LT = 5;
    // Less than or equal to
    NUMBER_LTE = 6;
  }

  enum BooleanCondition {
    // Unknown
    EVENT_STRATEGY_BOOLEAN_CONDITION_UNKNOWN = 0;
    // true
    TRUE = 1;
    // false
    FALSE = 2;
  }

  message LabelNotices {
    string index = 1;
    string value = 2;
    repeated string receiverRoutes = 3;
  }

  message EventRuleItem {
    uint32 strategyId = 1;
    uint32 levelId = 2;
    DataType dataType = 3;
    string index = 4;
    string value = 5;
    StringCondition stringCondition = 6;
    NumberCondition numberCondition = 7;
    BooleanCondition booleanCondition = 8;
    repeated string receiverRoutes = 9;
    repeated LabelNotices labelNotices = 10;
  }

  houyi.common.TeamItem team = 1;
  repeated houyi.common.EventDatasourceItem datasource = 2;
  string name = 3;
  string topic = 4;
  repeated string receiverRoutes = 5;
  map<string, string> labels = 6;
  map<string, string> annotations = 7;
  uint32 strategyId = 8;
  repeated EventRuleItem rules = 9;
}

message LogsStrategyItem {
  enum Condition {
    // Unknown
    LOGS_STRATEGY_CONDITION_UNKNOWN = 0;
    // Equal to
    EQ = 1;
    // Not equal to
    NE = 2;
    // Greater than
    GT = 3;
    // Greater than or equal to
    GTE = 4;
    // Less than
    LT = 5;
    // Less than or equal to
    LTE = 6;
  }

  message LogsRuleItem {
    uint32 strategyId = 1;
    uint32 levelId = 2;
    Condition condition = 3;
    int64 value = 4;
    string keyword = 5;
    SampleMode sampleMode = 6;
    repeated string receiverRoutes = 7;
  }

  houyi.common.TeamItem team = 1;
  repeated houyi.common.LogDatasourceItem datasource = 2;
  string name = 3;
  string expr = 4;
  repeated string receiverRoutes = 5;
  map<string, string> labels = 6;
  map<string, string> annotations = 7;
  uint32 strategyId = 8;
  repeated LogsRuleItem rules = 9;
  google.protobuf.Duration duration = 10;
}

message RemoveStrategyItem {
  StrategyType type = 1;
  uint32 strategyId = 2;
  uint32 teamId = 3;
}
